--- a/src/mainPageCSS.css
+++ b/src/mainPageCSS.css
@@ -6,7 +6,22 @@ body {
     overflow: hidden;
   }
   
-
+  #score {
+    transform-style: preserve-3d;
+    font-size:90px;
+    line-height: 90px;
+    color: pink;
+  }
+  #tag {
+    transform-style: preserve-3d;
+    display: none;
+    position:absolute;
+    top: -55px;
+    left:50%;
+    transform: translateX(-50%);
+    font-size:50px;
+    line-height: 50px;
+  } 
 #title {
     position: relative;
     display: block;
