--- a/src/mainPageCSS.css
+++ b/src/mainPageCSS.css
@@ -8,6 +8,7 @@ body {
     overflow: hidden;
     margin: 0 !important;
     padding: 0 !important;
+    height: 100%;
   }
 
     .top_row{
@@ -34,6 +35,7 @@ body {
     font-size:150%;
   } 
   #title {
+    top: 0;
     color: pink;
     font-size:200%;
   } 
@@ -43,17 +45,26 @@ body {
     display: block;
     margin: auto;
     margin-top: 10%;
+    justify-self: center;
 }
 
 /* menu options */
-#alloptions{
+.alloptions{
     top: 10%;
-    position:relative;
-    display: block;
-    margin:auto;
+    /* position:relative;
+    display: block; 
+    margin:auto; 
     justify-content: center;
-    align-items: center;
-
+    align-items: center;*/
+    width: 100%;
+}
+.title_img{
+    width: 100%;
+    max-height: 150px;
+}
+.gif{
+    max-width:500px;
+    margin-left: 35%;
 }
 
 .menu_option1{
@@ -61,6 +72,7 @@ body {
     display: block;
     margin: 50px;
     margin-left: 35%;
+    align-items: center;
 }
 
 .menu_option1 .img-top1{
